Fixed glossary entry

--- a/site/locales/en/glossary.json
+++ b/site/locales/en/glossary.json
@@ -29,5 +29,5 @@
 	"term:TEST_OR_TERMINATING_CONDITION": "Test",
 	"term:TIME_DELAY_LOOP": "Time Delay Loop",
 	"term:TOP_DOWN_DESIGN": "Top Down Design",
-	"term:VACCUM_TUBE": "Vacuum Tube"
+	"term:VACUUM_TUBE": "Vacuum Tube"
 }
