--- a/site/locales/he/glossary.json
+++ b/site/locales/he/glossary.json
@@ -29,5 +29,5 @@
 	"term:TEST_OR_TERMINATING_CONDITION": "טסט (תנאי עצירה)",
 	"term:TIME_DELAY_LOOP": "לוּלְאַת הַשְׁהָיָה",
 	"term:TOP_DOWN_DESIGN": "עיצוב מעלה-מטה",
-	"term:VACCUM_TUBE": "שְׁפוֹפֶרֶת רִיק"
+	"term:VACUUM_TUBE": "שְׁפוֹפֶרֶת רִיק"
 }
